# Simulations

./: .gitignore
2L_Converter/Avg_VSI_Ccode/MATLAB/: Kgain2Ccode.m  VSI_C_Init.m
2L_Converter/Avg_VSI_Ccode/PLECS/: VSI_Ccode.plecs
2L_Converter/CSI_Ccode_Resonant_Controller/C_code/: CMakeLists.txt
2L_Converter/CSI_Ccode_Resonant_Controller/C_code/src/: Control.c  Converter.h  DllHeader.h  Matrices.h  main.c  stdafx.c
2L_Converter/CSI_Ccode_Resonant_Controller/MATLAB/: Init_CSI_Resonant.m  LQR_Search.m  Sim_CSI.m  Sim_CSI_Resonant.slx
2L_Converter/CSI_Ccode_Resonant_Controller/PLECS/: CSI_Ccode.plecs
2L_Converter/VSI_Ccode/MATLAB/: Sim_VSI.slx
2L_Converter/VSI_Ccode/PLECS/: VSI_Ccode.plecs
2L_Converter/VSI_Ccode_Resonant_Controller/MATLAB/: Final_Value.m  Init_VSI_Resonant.m  LQR_Search.m  Sim_VSI.m  Sim_VSI_Resonant.slx  Swarm_Init.m
2L_Converter/VSI_Ccode_Resonant_Controller/PLECS/: VSI_Ccode.plecs
Dependencies/PLECS/General_Models/: Library.plecs
HDT/HDT_ONCON_Paper/MATLAB/: C:\Users\Dave\Documents\git\Simulations\PLECS\HDT\MAT_Resonant.mat  C:\Users\Dave\Documents\git\Simulations\PLECS\HDT\MAT_Variables.mat  Draw_Plots.m  Final_Update.m  Final_Update_xi.m  MAT_swarms.mat  PSO_HDT_Disc_Res.m  PSO_HDT_Disc_Res_xi.m  PSO_HDT_Discrete.slx  PSO_HDT_Discrete_Init.m  Parallel_Injection.m  Sim_PSO_HDT_Discrete.m  Sim_PSO_HDT_Discrete_xi.m  Sim_Variables.m  Swarm_Init.m
HDT/HDT_ONCON_Paper/MATLAB_Plots/: Fig3.eps  IEEE_Plot.asv  IEEE_Plot.m  Main_Code.asv  Main_Code.m  vec_1.mat  (+1 more)
HDT/HDT_Test/: HDT_NPC_Disturbances.plecs  HDT_NPC_NoDisturbances.plecs  HDT_NoDisturbances.plecs  HDT_Stability.plecs  HDT_Test.plecs
HDT/HDT_UnifiedLQR_Ccode/C_code/: CMakeLists.txt
HDT/HDT_UnifiedLQR_Ccode/C_code/src/: Control.c  Control.h  Converter.c  Converter.h  Coordinates.h  Matrices.h  main.c  stdafx.c  stdafx.h
PrimaryControl/PrimaryControl_Journal_Paper/: Init_OSQP_PC.m  PC_OSQP.m  PC_OSQP_WHAT.m  PC_PIControl.m  Poliedro.m  Sim_OSQP_PC.slx  Sim_PIControl_PC.slx
VSI/VSI_Ccode/C_code/: CMakeLists.txt
VSI/VSI_Ccode/C_code/src/: Control.c  Control.h  Converter.c  Converter.h  Coordinates.h  Gain  Gain.h  PLL.c  main.c  stdafx.c  stdafx.h
(+57 files in other folders)
